refactor(model): relocate model classes into model package